Allow overriding JVM args with an environment variable